--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2014-10-03  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Object/constructor.java:
+	* testlet/java/lang/Object/classInfo/getField.java:
+	* testlet/java/lang/Object/classInfo/getFields.java:
+	* testlet/java/lang/Object/classInfo/getMethod.java:
+	Updated.
+
 2014-10-02  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Object/classInfo/getConstructors.java:
