--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-10-06  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/OutOfMemoryError/TryCatch.java:
+	* testlet/java/lang/OutOfMemoryError/classInfo/InstanceOf.java:
+	* testlet/java/lang/OutOfMemoryError/classInfo/getInterfaces.java:
+	* testlet/java/lang/OutOfMemoryError/classInfo/isPrimitive.java:
+	* testlet/java/lang/OutOfMemoryError/classInfo/isSynthetic.java:
+	Updated.
+
 2014-10-03  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Object/constructor.java:
