--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2014-11-04  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/RuntimeException/TryCatch.java:
+	* testlet/java/lang/RuntimeException/constructor.java:
+	* testlet/java/lang/RuntimeException/classInfo/InstanceOf.java:
+	* testlet/java/lang/RuntimeException/classInfo/isInterface.java:
+	* testlet/java/lang/RuntimeException/classInfo/isMemberClass.java:
+	* testlet/java/lang/RuntimeException/classInfo/isPrimitive.java:
+	* testlet/java/lang/RuntimeException/classInfo/isSynthetic.java:
+	Updated.
+
 2014-11-03  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/OutOfMemoryError/classInfo/getModifiers.java:
