--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2014-11-07  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/RuntimeException/classInfo/getAnnotation.java:
+	* testlet/java/lang/RuntimeException/classInfo/getAnnotations.java:
+	* testlet/java/lang/RuntimeException/classInfo/getCanonicalName.java:
+	* testlet/java/lang/RuntimeException/classInfo/getClasses.java:
+	* testlet/java/lang/RuntimeException/classInfo/getConstructor.java:
+	* testlet/java/lang/RuntimeException/classInfo/getDeclaredAnnotations.java:
+	Six new tests added into RuntimeException/classInfo.
+
 2014-11-06  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/RuntimeException/classInfo/getConstructors.java:
