--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-11-12  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/RuntimeException/classInfo/getDeclaringClass.java:
+	* testlet/java/lang/RuntimeException/classInfo/getEnclosingClass.java:
+	* testlet/java/lang/RuntimeException/classInfo/getEnclosingConstructor.java:
+	* testlet/java/lang/RuntimeException/classInfo/getEnclosingMethod.java:
+	* testlet/java/lang/RuntimeException/classInfo/getField.java:
+	Another five new tests added into RuntimeException/classInfo.
+
 2014-11-11  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/RuntimeException/classInfo/getComponentType.java:
