--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-11-18  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/SecurityException/classInfo/getAnnotation.java:
+	* testlet/java/lang/SecurityException/classInfo/getAnnotations.java:
+	* testlet/java/lang/SecurityException/classInfo/getCanonicalName.java:
+	* testlet/java/lang/SecurityException/classInfo/getClasses.java:
+	* testlet/java/lang/SecurityException/classInfo/getComponentType.java:
+	Added new tests into SecurityException/classInfo.
+
 2014-11-14  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/SecurityException/TryCatch.java:
