--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2014-11-19  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/SecurityException/classInfo/getConstructor.java:
+	* testlet/java/lang/SecurityException/classInfo/getDeclaredAnnotations.java:
+	* testlet/java/lang/SecurityException/classInfo/getDeclaredClasses.java:
+	* testlet/java/lang/SecurityException/classInfo/getDeclaredConstructor.java:
+	* testlet/java/lang/SecurityException/classInfo/getDeclaredField.java:
+	* testlet/java/lang/SecurityException/classInfo/getDeclaredMethod.java:
+	Added six new tests into SecurityException/classInfo.
+
 2014-11-18  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/SecurityException/classInfo/getAnnotation.java:
