--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-11-20  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/SecurityException/classInfo/getDeclaringClass.java:
+	* testlet/java/lang/SecurityException/classInfo/getEnclosingClass.java:
+	* testlet/java/lang/SecurityException/classInfo/getEnclosingConstructor.java:
+	* testlet/java/lang/SecurityException/classInfo/getEnclosingMethod.java:
+	* testlet/java/lang/SecurityException/classInfo/getMethod.java:
+	Added five new tests into SecurityException/classInfo.
+
 2014-11-19  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/SecurityException/classInfo/getConstructor.java:
