--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-12-18  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/StackOverflowError/classInfo/isInterface.java:
+	* testlet/java/lang/StackOverflowError/classInfo/isLocalClass.java:
+	* testlet/java/lang/StackOverflowError/classInfo/isMemberClass.java:
+	* testlet/java/lang/StackOverflowError/classInfo/isPrimitive.java:
+	* testlet/java/lang/StackOverflowError/classInfo/isSynthetic.java:
+	Updated.
+
 2014-12-17  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/StackOverflowError/classInfo/getMethods.java:
