--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2014-12-31  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* gnu/testlet/java/util/Objects/compare.java,
+	* gnu/testlet/java/util/Objects/deepEquals.java,
+	* gnu/testlet/java/util/Objects/equals.java,
+	* gnu/testlet/java/util/Objects/hash.java,
+	* gnu/testlet/java/util/Objects/hashCode.java,
+	* gnu/testlet/java/util/Objects/requireNonNull.java,
+	* gnu/testlet/java/util/Objects/toString.java:
+	Added tests for the methods in java.util.Objects.
+
 2014-12-18  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* gnu/testlet/java/lang/StackOverflowError/classInfo/isInterface.java:
