--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-01-05  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* gnu/testlet/java/lang/Boolean/constructor.java:
+	Added new test for the Boolean class.
+
 2014-12-31  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* gnu/testlet/java/util/Objects/compare.java,
