--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-01-06  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* gnu/testlet/java/lang/Boolean/BooleanTest.java:
+	* gnu/testlet/java/lang/Boolean/compareToBoolean.java:
+	Fixed batch compilation problem.
+
 2015-01-05  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* gnu/testlet/java/lang/Boolean/constructor.java:
