--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-01-08  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Boolean/classInfo/getAnnotation.java:
+	* testlet/java/lang/Boolean/classInfo/getAnnotations.java:
+	* testlet/java/lang/Boolean/classInfo/getCanonicalName.java:
+	* testlet/java/lang/Boolean/classInfo/getClasses.java:
+	* testlet/java/lang/Boolean/classInfo/getComponentType.java:
+	Added five new tests into lang/Boolean/classInfo.
+
 2015-01-07  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Boolean/classInfo/InstanceOf.java:
