--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2015-01-12  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Boolean/classInfo/getDeclaredMethod.java:
+	* testlet/java/lang/Boolean/classInfo/getDeclaredMethods.java:
+	* testlet/java/lang/Boolean/classInfo/getDeclaringClass.java:
+	* testlet/java/lang/Boolean/classInfo/getEnclosingClass.java:
+	* testlet/java/lang/Boolean/classInfo/getEnclosingConstructor.java:
+	* testlet/java/lang/Boolean/classInfo/getEnclosingMethod.java:
+	Added another six new tests into lang/Boolean/classInfo.
+
 2015-01-09  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Boolean/classInfo/getDeclaredAnnotations.java:
