--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-01-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* gnu/testlet/java/security/KeyPairGenerator/PR64881.java:
+	Check that KeyPairGenerator.genKeyPair() returns a key
+	using the specified algorithm and bit size.
+
 2015-02-02  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Byte/constructor.java:
