--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2015-02-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* gnu/testlet/java/security/KeyPairGenerator/PR64902.java:
+	Check that a correctly named generator is returned for
+	each standard generator name and that the keys from
+	that generator use a standard algorithm name.
+
 2015-01-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* gnu/testlet/java/security/KeyPairGenerator/PR64881.java:
