--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2015-02-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	* gnu/testlet/java/security/KeyPairGenerator/PR64904.java:
+	Check that the generators work without explicit initialisation.
+	* gnu/testlet/java/security/KeyPairGenerator/getInstance14.java:
+	Remove provider following test completion.
+
+2015-02-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* gnu/testlet/java/security/KeyPairGenerator/PR64902.java:
 	Check that a correctly named generator is returned for
 	each standard generator name and that the keys from
