--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2015-02-03  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
+	* testlet/java/lang/Byte/classInfo/getConstructors.java:
+	* testlet/java/lang/Byte/classInfo/getDeclaredAnnotations.java:
+	* testlet/java/lang/Byte/classInfo/getDeclaredClasses.java:
+	* testlet/java/lang/Byte/classInfo/getDeclaredConstructor.java:
+	* testlet/java/lang/Byte/classInfo/getMethod.java:
+	* testlet/java/lang/Byte/classInfo/getMethods.java:
+	Added new tests.
+
+2015-02-03  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
 	* testlet/java/lang/Byte/classInfo/InstanceOf.java:
 	Updated.
 	* testlet/java/lang/Byte/classInfo/getAnnotation.java:
