--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2015-02-06  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Byte/classInfo/getInterfaces.java:
+	* testlet/java/lang/Byte/classInfo/getModifiers.java:
+	* testlet/java/lang/Byte/classInfo/getName.java:
+	* testlet/java/lang/Byte/classInfo/getPackage.java:
+	* testlet/java/lang/Byte/classInfo/getSimpleName.java:
+	* testlet/java/lang/Byte/classInfo/getSuperclass.java:
+	6 tests have been updated.
+
 2015-02-04  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Byte/classInfo/getEnclosingClass.java:
