--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-03-02  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Character/classInfo/getConstructors.java:
+	* testlet/java/lang/Character/classInfo/getDeclaredAnnotations.java:
+	* testlet/java/lang/Character/classInfo/getDeclaredClasses.java:
+	* testlet/java/lang/Character/classInfo/getDeclaredConstructor.java:
+	* testlet/java/lang/Character/classInfo/getDeclaredConstructors.java:
+	Added five new tests into Character/classInfo.
+
 2015-02-17  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Character/classInfo/getAnnotation.java:
