--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2015-03-06  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Character/classInfo/getMethod.java:
+	* testlet/java/lang/Character/classInfo/getMethods.java:
+	* testlet/java/lang/Character/classInfo/isAnnotation.java:
+	* testlet/java/lang/Character/classInfo/isAnnotationPresent.java:
+	* testlet/java/lang/Character/classInfo/isAnonymousClass.java:
+	* testlet/java/lang/Character/classInfo/isArray.java:
+	* testlet/java/lang/Character/classInfo/isAssignableFrom.java:
+	* testlet/java/lang/Character/classInfo/isEnum.java:
+	Added eight new tests into Character/classInfo.
+
 2015-03-04  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Character/classInfo/getEnclosingClass.java:
