--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-03-12  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Class/classInfo/getAnnotation.java:
+	* testlet/java/lang/Class/classInfo/getAnnotations.java:
+	* testlet/java/lang/Class/classInfo/getCanonicalName.java:
+	* testlet/java/lang/Class/classInfo/getClasses.java:
+	* testlet/java/lang/Class/classInfo/getComponentType.java:
+	Added five new tests into Character/classInfo.
+
 2015-03-09  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Class/classInfo/InstanceOf.java:
