--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,19 @@
+2015-04-09  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Class/classInfo/isAnnotation.java:
+	* testlet/java/lang/Class/classInfo/isAnnotationPresent.java:
+	* testlet/java/lang/Class/classInfo/isAnonymousClass.java:
+	* testlet/java/lang/Class/classInfo/isArray.java:
+	* testlet/java/lang/Class/classInfo/isEnum.java:
+	Added five new test into Class/classInfo.
+
 2015-04-08  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Class/classInfo/getField.java:
 	* testlet/java/lang/Class/classInfo/getFields.java:
 	* testlet/java/lang/Class/classInfo/getMethod.java:
 	* testlet/java/lang/Class/classInfo/getMethods.java:
-	Added five new test into Class/classInfo.
+	Added four new test into Class/classInfo.
 
 2015-04-07  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
