--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-04-14  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Double/classInfo/InstanceOf.java:
+	* testlet/java/lang/Double/classInfo/getInterfaces.java:
+	* testlet/java/lang/Double/classInfo/isMemberClass.java:
+	* testlet/java/lang/Double/classInfo/isPrimitive.java:
+	* testlet/java/lang/Double/classInfo/isSynthetic.java:
+	Updated five tests in java.lang.Double/classInfo.
+
 2015-04-13  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Double/constructor.java:
